# hyprgrid

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo-config.toml  take-screenshot.sh
docs/adr/: 0001-command-source-categories.md
docs/agents/: issue-tracker.md  triage-labels.md
src/: app.rs  launcher.rs  layout.rs  main.rs  screen.rs
src/config/: icons.rs  loader.rs  mod.rs  types.rs
src/input/: keys.rs  mod.rs
src/theme/: mod.rs  types.rs
src/ui/: cell.rs  grid.rs  mod.rs  style.rs
