[package]
name = "hyprgrid"
version = "0.1.7"
edition = "2024"
description = "Dynamic grid-based launcher and window switcher for Hyprland"
authors = ["Andreas Bjoru"]
license = "MIT"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0"
shellexpand = "3.1"
log = "0.4"
env_logger = "0.11"
freedesktop-desktop-entry = "0.7"
notify-rust = "4"
